--- a/manager_screen.kv
+++ b/manager_screen.kv
@@ -1,9 +1,9 @@
-#: include login_screen.kv
-#: include main_screen.kv
-#: include registration.kv
+# : include kv/login_screen.kv
+# : include kv/main_screen.kv
+# : include kv/registration.kv
 
 
-<ManagerScreen>
+<ManagerScreen>:
     manager_screen:manager_screen
     id : manager_screen
     name:"manager_screen"
