--- a/kv/main_screen.kv
+++ b/kv/main_screen.kv
@@ -77,7 +77,7 @@
             id: avatar
             size_hint: None, None
             size: "56dp", "56dp"
-            source: "views/kivymd.png"
+            source: "py/logo/kivymd.png"
 
     MDLabel:
         text: "KivyMD library"
