--- a/kv/login_screen.kv
+++ b/kv/login_screen.kv
@@ -20,6 +20,8 @@
         size_hint: None, None
         size: root.width-root.width/10,root.height-root.height/10
         pos_hint: {"center_x": .5, "center_y": .5}
+        radius: dp(15),dp(15),dp(15),dp(15)
+
         BoxLayout:
             orientation:"vertical"
             canvas:
