--- a/kv/manager_screen.kv
+++ b/kv/manager_screen.kv
@@ -1,7 +1,9 @@
 #: include kv/login_screen.kv
 #: include kv/main_screen.kv
 #: include kv/registration.kv
-
+#: include kv/cash_register.kv
+# this is the main screen of the widget 
+# the first screen which show when entering the application
 
 <ManagerScreen>:
     manager_screen:manager_screen
