--- a/kv/registration.kv
+++ b/kv/registration.kv
@@ -1,158 +1,125 @@
 <Registration>:
     kembali_kerumah:kembali_kerumah
-    lp_properties:[username,password,email]
+    # lp_properties:[username,password,email]
     canvas.before:
         Rectangle:
             pos: self.pos
             size: self.size
             source:'py/logo/bgregist.jpg'
+    MDIconButton:
+        id:kembali_kerumah
 
+        pos_hint: {'left': 1, 'top': 1}
+        icon:"arrow-left-bold-outline"
+        on_release : root.back("berhasil balik")
+
+ 
+    MDCard:
+        orientation: "vertical"
+        size_hint: None, None
+        size: root.width-root.width/5,root.height-root.height/5
+        pos_hint: {"center_x": .5, "center_y": .5}
+        # pos:self.pos
+        radius: dp(15),dp(15),dp(15),dp(15)
 
     MDBoxLayout:
-        pos_hint: {"center_x": .5, "center_y": .5}
-        size:self.size
-        pos : self.pos
-        orientation:"vertical"  
-        MDBoxLayout:
-            orientation:"vertical"
-            size_hint_y:.1
-            MDIconButton:
-                id:kembali_kerumah
-                icon:"arrow-left-bold-outline"
-                on_release : root.back("berhasil balik")
-        MDBoxLayout:
-            size_hint_y :.1
-            orientation: "horizontal"            
-            spacing : 50
-            MDBoxLayout:
-                orientation: "horizontal"
-            MDIconButton:
-                icon: "google-plus.png"
-                user_font_size :"24sp"
-                pos_hint: {"center_x": .5, "center_y": .5}
-                on_release : print("testing")
-            MDIconButton:
-                icon: "facebook.png"
-                user_font_size :"24sp"
-                pos_hint: {"center_x": .5, "center_y": .5}
-                on_release : print("testing")
-            MDBoxLayout:
-                orientation: "horizontal"
-        MDBoxLayout:
-            orientation:"vertical"  
-            size_hint_y:.1
+        orientation: "horizontal"      
+        spacing : 50
+        size_hint:None,None
+        pos_hint: { 'top': .95,'center_x':.45}
+        
+        MDIconButton:
+            icon: "google-plus.png"
+            user_font_size :"24sp"
+            on_release : print("testing")
+        MDIconButton:
+            icon: "facebook.png"
+            user_font_size :"24sp"
+            on_release : print("testing")
+    MDLabel :
+        text:"atau"
+        pos_hint: {"top": .85,'center_x':.5}
+        halign: 'center'
+        size_hint:None,None
+        spacing:10
+    # MDBoxLayout:
+    #     orientation: 'vertical'
+    #     size_hint_x: None
+    #     size_hint_y: None
+    #     pos_hint: {'center_x': .5, 'top': .8}
+
+        # pos_hint: {'center_x': 0.5, 'center_y': 0.3}
+        # width: dp(200)
+
+    #  Dibawah adalah form registrasi
+    #  Dibawah adalah form registrasi
+    #  Dibawah adalah form registrasi
     
-            MDLabel :
-                text:"atau"
-                halign:"center"
-                pos_hint: {"center_x": .5, "center_y": .5}
-                # pos_y :10s
-                size_hint_y:.3
-                valign:'bottom'
-        MDBoxLayout:
-            orientation:'vertical'
-            spacing : 10
-            # # size:self.size
-            # pos_hint:{'center_y':.3}        
-            pos_hint: {"center_x": .5, "center_y": .5}
-            size_hint_y:.55
+    MDTextField:
+        id: first_name
+        color_mode: 'custom'
+        line_color_focus: .4, .4, .3, 1
+        hint_text: "Username"
+        helper_text: "Wajib diisi"
+        margin_bottom: dp(20)
+        on_focus:root.text_required_on_focus()
+        required: True
+        pos_hint: {'center_x': .5, 'top': .75}
+        size_hint:.5,None
+        helper_text_mode: "on_error"
+        padding:20,20,20,20
 
-            MDTextField:
-                id : namalengkap
-                pos_hint: {"center_x": .5, "center_y": .5}
-                hint_text: "Nama Lengkap"
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                size_hint_y:.2
-                size_hint_x:.8
+    MDTextField:
+        id: passwordmy
+        hint_text: "Password"
+        margin_bottom: dp(20)
+        password: True
+        # required: True
+        pos_hint: {'center_x': .5, 'top': .68}
+        size_hint:.5,None
+        helper_text_mode: "on_error"
+ 
+    MDIconButton:
+        icon: "eye-off"
+        ripple_scale: .5
+        # pos: text_field.width - self.width + dp(8), 0
+        on_release:
+            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
+            passwordmy.password = False if passwordmy.password is True else True
+        pos_hint: {'center_x': .8, 'top': .67}
+        size_hint:.5,None
 
-            MDTextField:
-                id :noktp
-                icon_left:"password"
-                # icon_left: "form-textbox-password"
-            # theme_text_color: "Dark"
-            # text_color: 0, 0, 1, 1
-                hint_text: "noktp"
-                password :True
-                pos_hint: {"center_x": .5, "center_y": .5}
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                size_hint_y:.2
-                size_hint_x:.8
-
-            MDTextField:
-                id:username
-                icon_left: "email"
-                pos_hint: {"center_x": .5, "center_y": .5}
-                hint_text: "username"
-                required:True
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                size_hint_y:.2
-                size_hint_x:.8
-
-            MDTextField:
-                id:password
-                icon_left:"onepassword"
-                # icon_left: "form-textbox-password"
-                hint_text: "password"
-                password :True
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                pos_hint: {"center_x": .5, "center_y": .5}
-                size_hint_y:.2
-                size_hint_x:.8
-
-            MDTextField:
-                id:email
-                icon_left: "email"
-                pos_hint: {"center_x": .5, "center_y": .5}
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                size_hint:(.5,None)
-                hint_text: "no HP"
-                size_hint_x:.8
-
-            MDTextField:
-                icon_left:"onepassword"
-                # icon_left: "form-textbox-password"
-                hint_text: "email"
-                password :True
-                color_mode: 'custom'
-                mode: "fill"
-                fill_color:0,0,0,.1
-                line_color_focus: 1, 1, 1, 1
-                pos_hint: {"center_x": .5, "center_y": .5}
-                size_hint_y:.2
-                size_hint_x:.8
-
-            # BoxLayout:
-            #     orientation: "horizontal"
-            #     spacing : 30
-            #     pos_hint: {"top": 1}
-
-            MDFlatButton:
-                size_hint_y:.15
-                size_hint_x:.25
-                height:200
-
-                md_bg_color:1, 1, 1, 1
-                id:action
-                text: "Accept"
-                pos_hint:{"center_x":.5,'center_y':.5}
-                on_release:root.action(self)
-                # theme_text_color: "Dark"
-                # text_color: 0, 0, 1, 1
+    MDTextField:
+        id: email_signup
+        hint_text: "Email"
+        margin_bottom: dp(20)
+        # required: True
+        helper_text_mode: "on_error"
+        pos_hint: {'center_x': .5, 'top': .61}
+        size_hint:.5,None
+    MDTextField:
+        id: password_signup
+        hint_text: "Password"
+        margin_bottom: dp(20)
+        # required: True
+        helper_text_mode: "on_error"
+        password: True
+        pos_hint: {'center_x': .5, 'top': .54}
+        size_hint:.5,None
+    # MDRaisedButton:
+    #     id: signup
+    #     text: "Sign up"
+    #     elevation_normal: 2
+    #     opposite_colors: True
+    #     pos_hint: {'center_x': 0.5, 'top': 0.2}
+    #     on_release:  app.user_register()
+    #     on_press: app.progress_loader('register')
+    # MDSpinner:
+    #     id: spinner_register
+    #     size_hint: None, None
+    #     size: dp(50), dp(50)
+    #     pos_hint: {'center_x': 0.5, 'top': 0.1}
+    #     active: False
 
     # BoxLayout:
     #     orientation:"vertical"
